--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -103,6 +103,16 @@
                 </div>
               </li>
             {% endif %}
+            <!-- Инструменты -->
+            <li class="nav-item dropdown">
+              <a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
+                <i class="fas fa-tools"></i><span>Инструменты</span>
+              </a>
+              <div class="dropdown-menu text-center py-0">
+                <a class="dropdown-item text-center py-1" href="{{ url_for('tools.payment.payment_tool') }}">Расчет зарплаты/пенсии</a>
+                <a class="dropdown-item text-center py-1" href="{{ url_for('tools.rewriter.rewriter_tool') }}">Перефразирование текста</a>
+              </div>
+            </li>
           </ul>
         </div>
       </nav>
@@ -169,7 +179,7 @@
         <footer class="bg-white sticky-footer" style="padding-top: 4px;padding-bottom: 4px;--bs-body-bg: #f8f9fc;">
           <div class="container my-auto">
             <div class="text-center my-auto copyright">
-              <span style="font-size: 9.8px;">Copyright © Evgeny Semenov, 2021-2023 - <a href="/tools/rewriter">Tools</a></span>
+              <span style="font-size: 9.8px;">Copyright © Evgeny Semenov, 2021-2023</span>
             </div>
           </div>
         </footer>
