--- a/app/templates/tools/payment.html
+++ b/app/templates/tools/payment.html
@@ -43,20 +43,23 @@
                 <span style="color: var(--bs-danger);">{{ error }}</span>
               {% endfor %}
             </div>
-
           </div>
-          {% for item in form %}
-            {% if item.label.field_id.startswith('single_') %}
-              <div class="form-check form-switch">
-                {{ item(class="form-check-input", type="checkbox",
-                   checked=item.object_data, id=item.label.field_id) }}
-                {{ item.label(class="form-check-label", for=item.label.field_id) }}
-                {% for error in item.errors %}
-                  <span style="color: var(--bs-danger);">{{ error }}</span>
-                {% endfor %}
-              </div>
-            {% endif %}
-          {% endfor %}
+          <div class="row">
+            {% for item in form %}
+              {% if item.label.field_id.startswith('single_') %}
+                <div class="col-sm-12 col-md-6">
+                  <div class="form-check form-switch">
+                    {{ item(class="form-check-input", type="checkbox",
+                       checked=item.object_data, id=item.label.field_id) }}
+                    {{ item.label(class="form-check-label", for=item.label.field_id) }}
+                    {% for error in item.errors %}
+                      <span style="color: var(--bs-danger);">{{ error }}</span>
+                    {% endfor %}
+                  </div>
+                </div>
+              {% endif %}
+            {% endfor %}
+          </div>
           {{ form.calculate(class="btn btn-success link-light mt-2", type="submit",
           style="background: #008751;width: 100%;font-weight: bold;border-style: none;") }}
         </div>
