--- a/app/templates/tools/payment.html
+++ b/app/templates/tools/payment.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
   <div class="container-fluid">
-    <h3 class="text-center text-dark mb-1">
-      {% block title %}Расчет денежного содержания (аттестованные){% endblock %}
+    <h3 class="text-center text-dark mb-2">
+      {% block title %}Расчет денежного содержания (аттестованные)
+        <a class="btn btn-light btn-sm border rounded mx-1" role="button" href="{{ url_for('.payment_data') }}">EDIT</a>
+      {% endblock %}
     </h3>
   </div>
   <form method="post">
