--- a/app/templates/tools/payment_data_edit.html
+++ b/app/templates/tools/payment_data_edit.html
@@ -15,6 +15,11 @@
            role="button" style="width: 100%;font-weight: bold;border-style: none;"
            href="{{ url_for('.documents_get') }}">Нормативные документы</a>
       </div>
+      <div class="col-md-10 col-xl-8">
+        <a class="btn btn-primary mb-2"
+           role="button" style="width: 100%;font-weight: bold;border-style: none;"
+           href="{{ url_for('.increase_get') }}">Индексация</a>
+      </div>
       <div class="col-md-10 col-xl-8 mt-4">
         <a class="btn btn-secondary d-block w-100" role="button" href="{{ url_for('.payment_tool') }}">Назад</a>
       </div>
