--- a/app/templates/tools/payment.html
+++ b/app/templates/tools/payment.html
@@ -3,7 +3,9 @@
   <div class="container-fluid">
     <h3 class="text-center text-dark mb-2">
       {% block title %}Расчет денежного содержания (аттестованные)
-        <a class="btn btn-light btn-sm border rounded mx-1" role="button" href="{{ url_for('.payment_data') }}">EDIT</a>
+        {% if current_user.is_authenticated and current_user.role.slug in (config.ROLE_ADMIN, ) %}
+          <a class="btn btn-light btn-sm border rounded mx-1" role="button" href="{{ url_for('.payment_data') }}">EDIT</a>
+        {% endif %}
       {% endblock %}
     </h3>
   </div>
@@ -11,7 +13,7 @@
     {{ form.hidden_tag() }}
     <div class="container mb-2">
       <div class="row justify-content-center">
-        <div class="col-md-10 col-xl-8">
+        <div class="col-md-10">
           {% for item in form %}
             {% if item.label.field_id.startswith('rate_') %}
               <div class="row mb-1">
@@ -71,7 +73,7 @@
   {% if payment_data %}
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-md-10 col-xl-8">
+        <div class="col-md-10">
           <div class="card shadow mb-2">
             <div class="card-header py-3">
               <p class="text-center text-danger m-0 fw-bold">Расчет зарплаты</p>
@@ -133,7 +135,7 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-10 col-xl-8">
+        <div class="col-md-10">
           <div class="card shadow mb-2">
             <div class="card-header py-3">
               <p class="text-center text-danger m-0 fw-bold">Расчет пенсии</p>
