--- a/app/templates/tools/payment_documents.html
+++ b/app/templates/tools/payment_documents.html
@@ -7,7 +7,7 @@
   </div>
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-10 col-xl-8">
+      <div class="col-md-10">
         <div class="table-responsive text-center">
           <table class="table table-sm">
             <thead>
