--- a/app/templates/tools/payment_increase_edit.html
+++ b/app/templates/tools/payment_increase_edit.html
@@ -48,7 +48,7 @@
           </div>
           <div class="row">
             <div class="col mb-3">
-              {{ form.submit(class="btn btn-info link-light", id="increase_edit", style="width: 100%;font-weight: bold;border-style: none;") }}
+              {{ form.submit(class="btn btn-primary link-light", id="increase_edit", style="width: 100%;font-weight: bold;border-style: none;") }}
             </div>
           </div>
           {% if form.form_errors %}
