--- a/app/templates/tools/payment_increase.html
+++ b/app/templates/tools/payment_increase.html
@@ -26,12 +26,12 @@
                   <td>{{ increase.id }}</td>
                   <td class="text-start">{{ increase.name }}</td>
                   <td class="text-start">{{ increase.value }}</td>
-                  <td class="text-start">{{ increase.document|safe|truncate(200) }}</td>
+                  <td class="text-start">{{ increase.document|safe|truncate(30) }}</td>
                   <td class="text-start">{% for rate in increase.rates %}- {{ rate.name|lower }}<br>{% endfor %}</td>
                   <td>
                     <div class="btn-group" role="group">
                       <a class="btn btn-secondary btn-sm" role="button" href="{{ url_for('.increase_edit', increase_id=increase.id) }}">Редактировать</a>
-                      <a class="btn btn-danger btn-sm" role="button" href="{{ url_for('.increase_delete', increase_id=increase.id) }}">Удалить</a>
+                      <a class="btn btn-danger btn-sm" role="button" href="{{ url_for('.increase_delete', id_=increase.id) }}">Удалить</a>
                     </div>
                   </td>
                 </tr>
