Payment app addons

--- a/app/templates/tools/payment_data_edit.html
+++ b/app/templates/tools/payment_data_edit.html
@@ -18,6 +18,11 @@
       <div class="col-md-10 col-xl-8">
         <a class="btn btn-primary mb-2"
            role="button" style="width: 100%;font-weight: bold;border-style: none;"
+           href="{{ url_for('.rates_get') }}">Базовые оклады</a>
+      </div>
+      <div class="col-md-10 col-xl-8">
+        <a class="btn btn-primary mb-2"
+           role="button" style="width: 100%;font-weight: bold;border-style: none;"
            href="{{ url_for('.increase_get') }}">Индексация</a>
       </div>
       <div class="col-md-10 col-xl-8 mt-4">
